INS-3 [ Fix Edit Form on Available Products Tab. Start debug tab checker for required inner data ]

--- a/app/design/adminhtml/default/default/template/offlinestores/edit/js.phtml
+++ b/app/design/adminhtml/default/default/template/offlinestores/edit/js.phtml
@@ -28,6 +28,8 @@
 function saveAndContinueEdit(urlTemplate) {
         var template = new Template(urlTemplate, /(^|.|\r|\n)({{(\w+)}})/);
         var url = template.evaluate({tab_id: offlinestores_info_tabsJsTabs.activeTab.id});
+
+        console.log('Start debug tab cheker');
         editForm.submit(url);
 }
 </script>
