--- a/app/design/adminhtml/default/default/template/offlinestores/edit/js.phtml
+++ b/app/design/adminhtml/default/default/template/offlinestores/edit/js.phtml
@@ -1,35 +1,25 @@
-<?php
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     default_default
- * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
-?>
 <script type="text/javascript">
 function saveAndContinueEdit(urlTemplate) {
         var template = new Template(urlTemplate, /(^|.|\r|\n)({{(\w+)}})/);
         var url = template.evaluate({tab_id: offlinestores_info_tabsJsTabs.activeTab.id});
-
-        console.log('Start debug tab cheker');
         editForm.submit(url);
+}
+editForm._processValidationResult = function(transport) {
+        var response = transport.responseText.evalJSON();
+        if (response.error) {
+                if (response.attribute && $(response.attribute)) {
+                        $(response.attribute).setHasError(true, offlineStoreForm);
+                        Validation.ajaxError($(response.attribute), response.message);
+                        if (!Prototype.Browser.IE) {
+                                $(response.attribute).focus();
+                        }
+                }
+                else if ($('messages')) {
+                        $('messages').innerHTML = '<ul class="messages"><li class="error-msg"><ul><li>' + response.message + '</li></ul></li></ul>';
+                }
+        }
+        else {
+            editForm._submit();
+        }
 }
 </script>
