--- a/app/design/frontend/weeds/default/template/offlinestores/widget/catalog.phtml
+++ b/app/design/frontend/weeds/default/template/offlinestores/widget/catalog.phtml
@@ -7,23 +7,24 @@
 /* @var $this Webinse_OfflineStores_Block_Widget_Catalog */
 ?>
 <?php
-$_productOfflineStoreCollection = $this->getLoadedProductCollection();
+$_offlineStoreCollection = $this->getLoadedProductCollection();
 $_helper = $this->helper('catalog/output');
 ?>
-<?php var_dump(count($_productOfflineStoreCollection));die; ?>
-<?php if(!$_productOfflineStoreCollection->count()): ?>
-    <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
+<?php if(!$_offlineStoreCollection->count()): ?>
+    <p class="note-msg"><?php echo $this->__('There are no offline stores matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
         <?php echo $this->getToolbarHtml() ?>
         <?php // List mode ?>
-        <?php if($this->getMode()!='grid'): ?>
+        <?php if($this->getMode()!='1'): ?>
             <?php $_iterator = 0; ?>
             <ol class="products-list" id="products-list">
-                <?php foreach ($_productCollection as $_product): ?>
-                    <li class="item<?php if( ++$_iterator == sizeof($_productCollection) ): ?> last<?php endif; ?>">
+                <?php foreach ($_offlineStoreCollection as $_offlineStore): ?>
+                    <li class="item<?php if( ++$_iterator == sizeof($_offlineStoreCollection) ): ?> last<?php endif; ?>">
                         <?php // Product Image ?>
-                        <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image">
+                        <?php var_dump($_offlineStore->getOfflineStoreUrl()); ?>
+                        <?php die('!!!'); ?>
+                        <a href="<?php echo $_offlineStore->getOfflineStoreUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_offlineStore, 'small_image'), null, true) ?>" class="product-image">
                             <?php /* Based on the native RWD styling, product images are displayed at a max of ~400px wide when viewed on a
                         one column page layout with four product columns from a 1280px viewport. For bandwidth reasons,
                         we are going to serve a 300px image, as it will look fine at 400px and most of the times, the image
@@ -31,10 +32,11 @@ $_helper = $this->helper('catalog/output');
                         This $_imgSize value could even be decreased further, based on the page layout
                         (one column, two column, three column) and number of product columns. */ ?>
                             <?php $_imgSize = 300; ?>
-                            <img id="product-collection-image-<?php echo $_product->getId(); ?>"
-                                 src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->keepFrame(false)->resize($_imgSize); ?>"
-                                 alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
+                            <img id="product-collection-image-<?php echo $_offlineStore->getId(); ?>"
+                                 src="<?php echo $this->helper('catalog/image')->init($_offlineStore, 'small_image')->keepFrame(false)->resize($_imgSize); ?>"
+                                 alt="<?php echo $this->stripTags($this->getImageLabel($_offlineStore, 'small_image'), null, true) ?>" />
                         </a>
+                        <?php die('!!!!'); ?>
                         <?php // Product description ?>
                         <div class="product-shop">
                             <div class="f-fix">
