--- a/app/design/frontend/weeds/default/template/offlinestores/widget/offlinestore.phtml
+++ b/app/design/frontend/weeds/default/template/offlinestores/widget/offlinestore.phtml
@@ -66,8 +66,13 @@ $_offlineStoreCollection  = $this->getLoadedOfflineStoreCollection();
                                  alt="<?php echo $this->stripTags($_offlineStore->getName()) ?>" />
                         </a>
                         <div class="product-info">
-                            <h2 class="product-name"><a href="<?php echo $_offlineStore->getOfflineStoreUrl() ?>" title="<?php echo $this->stripTags($_offlineStore->getName(), null, true) ?>"></a></h2>
+                            <h2 class="product-name"><a href="<?php echo $_offlineStore->getOfflineStoreUrl() ?>" title="<?php echo $this->stripTags($_offlineStore->getName(), null, true) ?>"><?php echo $this->stripTags($_offlineStore->getName(), null, true) ?></a></h2>
                             <?php // echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>
+                        </div>
+                        <div class="desc std">
+                            <?php $_offlineStoreNameStripped = $this->stripTags($_offlineStore->getName(), null, true); ?>
+                            <?php echo $_helper->offlineStoreAttribute($_offlineStore, $_offlineStore->getShortDescription(), 'short_description') ?>
+                            <a href="<?php echo $_offlineStore->getOfflineStoreUrl() ?>" title="<?php echo $_offlineStoreNameStripped ?>" class="link-learn"><?php echo $this->__('Learn More') ?></a>
                         </div>
                     </li>
                     <?php /*if ($i%$_columnCount==0 || $i==$_collectionSize): ?>
@@ -81,43 +86,4 @@ $_offlineStoreCollection  = $this->getLoadedOfflineStoreCollection();
             <?php echo $this->getToolbarHtml() ?>
         </div>
     </div>
-<?php endif; ?>
-<?php die('end'); ?>
-
-
-<?
-$_imgHtml   = '';
-if ($_imgUrl = $_category->getImageUrl()) {
-    $_imgHtml = '<p class="category-image"><img src="'.$_imgUrl.'" alt="'.$this->escapeHtml($_category->getName()).'" title="'.$this->escapeHtml($_category->getName()).'" /></p>';
-    $_imgHtml = $_helper->categoryAttribute($_category, $_imgHtml, 'image');
-}
-?>
-<div class="page-title category-title">
-    <?php if($this->IsRssCatalogEnable() && $this->IsTopCategory()): ?>
-        <a href="<?php echo $this->getRssLink() ?>" class="link-rss"><?php echo $this->__('Subscribe to RSS Feed') ?></a>
-    <?php endif; ?>
-    <h1><?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?></h1>
-</div>
-
-<?php echo $this->getMessagesBlock()->toHtml() ?>
-
-<?php if($_imgUrl): ?>
-    <?php echo $_imgHtml ?>
-<?php endif; ?>
-
-<?php if($_description=$this->getCurrentCategory()->getDescription()): ?>
-    <div class="category-description std">
-        <?php echo $_helper->categoryAttribute($_category, $_description, 'description') ?>
-    </div>
-<?php endif; ?>
-
-<?php if($this->isContentMode()): ?>
-    <?php echo $this->getCmsBlockHtml() ?>
-
-<?php elseif($this->isMixedMode()): ?>
-    <?php echo $this->getCmsBlockHtml() ?>
-    <?php echo $this->getProductListHtml() ?>
-
-<?php else: ?>
-    <?php echo $this->getProductListHtml() ?>
 <?php endif; ?>
