--- a/app/design/frontend/weeds/default/template/offlinestores/widget/offlinestore.phtml
+++ b/app/design/frontend/weeds/default/template/offlinestores/widget/offlinestore.phtml
@@ -14,7 +14,6 @@ $_offlineStoreCollection  = $this->getLoadedOfflineStoreCollection();
     <p class="note-msg"><?php echo $this->__('There are no offline stores matching the selection.') ?></p>
 <?php else: ?>
     <div class="offlinestore-section">
-        <?php echo $this->getToolbarHtml() ?>
         <?php // List mode ?>
         <?php if($this->getMode()!='1'): ?>
             <?php $_iterator = 0; ?>
@@ -83,7 +82,7 @@ $_offlineStoreCollection  = $this->getLoadedOfflineStoreCollection();
         <?php endif; ?>
 
         <div class="toolbar-bottom">
-            <?php echo $this->getToolbarHtml() ?>
+            <?php echo $this->getPagerHtml() ?>
         </div>
     </div>
 <?php endif; ?>
