--- a/app/design/adminhtml/default/default/layout/webinseofflinestores.xml
+++ b/app/design/adminhtml/default/default/layout/webinseofflinestores.xml
@@ -60,6 +60,7 @@
             <action method="addItem"><type>js</type><name>prototype/window.js</name></action>
             <action method="addItem"><type>js_css</type><name>prototype/windows/themes/default.css</name></action>
             <action method="addCss"><name>lib/prototype/windows/themes/magento.css</name></action>
+            <action method="addItem"><type>js_css</type><name>adminhtml/css/webinse.css</name></action>
         </reference>
         <reference name="content">
             <block type="webinseofflinestores/adminhtml_offlinestores_edit" name="offlinestores_edit"></block>
