INS-11 [ Refactoring. Cleaning ]

--- a/app/design/frontend/weeds/default/template/offlinestores/relation/product/offlinestores.phtml
+++ b/app/design/frontend/weeds/default/template/offlinestores/relation/product/offlinestores.phtml
@@ -1,6 +1,8 @@
 <?php
 /**
- * Display Offline Stores witch related with current product
+ * Display Offline Stores Product Addtional Tab with related with current product
+ *
+ * @see Webinse_OfflineStores_Block_Relation_Product_Offlinestores
  */
 $_offlineStores = $this->getOfflineStores();
 ?>
