--- a/app/design/frontend/weeds/default/template/offlinestores/view.phtml
+++ b/app/design/frontend/weeds/default/template/offlinestores/view.phtml
@@ -1,4 +1,11 @@
 <?php
+/**
+ * Offline store view template
+ *
+ * @see Webinse_OfflineStores_Block_Offlinestore_View
+ */
+?>
+<?php
 $_helper    = $this->helper('webinseofflinestores/output');
 $_offlineStore  = $this->getCurrentOfflineStore();
 $_imgHtml   = '';
