--- a/app/design/adminhtml/default/weeds/layout/webinseofflinestores.xml
+++ b/app/design/adminhtml/default/weeds/layout/webinseofflinestores.xml
@@ -1,30 +1,4 @@
 <?xml version="1.0"?>
-<!--
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     rwd_default
- * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
--->
 <layout version="0.1.0">
 
     <webinseofflinestores_admin_adminhtml_offlinestores_index>
@@ -60,7 +34,7 @@
             <action method="addItem"><type>js</type><name>prototype/window.js</name></action>
             <action method="addItem"><type>js_css</type><name>prototype/windows/themes/default.css</name></action>
             <action method="addCss"><name>lib/prototype/windows/themes/magento.css</name></action>
-            <action method="addItem"><type>js_css</type><name>adminhtml/css/webinse.css</name></action>
+            <action method="addCss"><name>css/webinse.css</name></action>
         </reference>
         <reference name="content">
             <block type="webinseofflinestores/adminhtml_offlinestores_edit" name="offlinestores_edit"></block>
@@ -79,6 +53,16 @@
     </webinseofflinestores_admin_adminhtml_offlinestores_edit>
 
     <webinseofflinestores_admin_adminhtml_offlinestores_new>
+        <reference name="head">
+            <action method="setCanLoadExtJs"><flag>1</flag></action>
+            <action method="setCanLoadTinyMce"><flag>1</flag></action>
+            <action method="addItem"><type>js</type><name>mage/adminhtml/wysiwyg/tiny_mce/setup.js</name></action>
+            <action method="addJs"><script>mage/adminhtml/wysiwyg/widget.js</script></action>
+            <action method="addItem"><type>js</type><name>prototype/window.js</name></action>
+            <action method="addItem"><type>js_css</type><name>prototype/windows/themes/default.css</name></action>
+            <action method="addCss"><name>lib/prototype/windows/themes/magento.css</name></action>
+            <action method="addCss"><name>css/webinse.css</name></action>
+        </reference>
         <reference name="content">
             <block type="webinseofflinestores/adminhtml_offlinestores_edit" name="offlinestores_edit"></block>
         </reference>
@@ -91,6 +75,7 @@
         </reference>
         <reference name="js">
             <block type="webinseofflinestores/adminhtml_template" template="offlinestores/edit/js.phtml" name="offlinestore.edit.js" as="offlinestore_edit_js"></block>
+            <block type="core/template" template="catalog/wysiwyg/js.phtml"/>
         </reference>
     </webinseofflinestores_admin_adminhtml_offlinestores_new>
 </layout>
